--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -11,6 +11,8 @@ html,
 body {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    /* Prevent horizontal scroll from animations/blobs */
 }
 
 ul,
